login service added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     defaultConfig {
         applicationId "com.mohammad_fathi.signin_sample"
         minSdkVersion 24
